# PWHomeWork13part2

./: pyproject.toml
pwhw10/: manage.py
pwhw10/pwhw10/: asgi.py  settings.py  urls.py  wsgi.py
pwhw10/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
pwhw10/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
pwhw10/quotes/static/quotes/: style.css
pwhw10/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  index.html
pwhw10/quotes/templatetags/: extract.py
pwhw10/users/: views.py
pwhw10/users/templates/users/: login.html  signup.html
pwhw10/utils/: add_quotes_to_mongo.py  migration.py
